--- a/_data/software/git.yml
+++ b/_data/software/git.yml
@@ -33,16 +33,7 @@ administrations:
   - adminCode: tbs-sct
     uses:
       - contact:
-          email: noreply@canada.ca
-          name: TBS-SCT
+          email: sebastien.lemay@hrsdc-hrdcc.ca
         date:
-          started: '1900-01-01'
-          metadataLastUpdated: '2020-01-15'
-  - adminCode: aafc-aac
-    uses:
-      - contact:
-          email: noreply@canada.ca
-          name: AAFC-AAC
-        date:
-          started: '1900-01-01'
-          metadataLastUpdated: '2020-01-15'
+          started: '2019-06-01'
+          metadataLastUpdated: '2024-10-10'
