--- a/_data/software/firefox.yml
+++ b/_data/software/firefox.yml
@@ -13,18 +13,17 @@ licences:
       en: 'https://www.mozilla.org/en-US/MPL/2.0/FAQ/'
       fr: 'https://www.mozilla.org/en-US/MPL/2.0/FAQ/'
     spdxID: MPL-2.0
+    level:
+      en: Main license
+      fr: License principale
 name:
   en: Firefox
   fr: Firefox
 tags:
   en:
-    - Web browser
-    - Desktop
-    - Mobile
+    - asdf
   fr:
-    - Navigateur Web
-    - Poste de travail
-    - Mobile
+    - asfd
 administrations:
   - adminCode: pch
     uses:
