--- a/_data/software/firefox.yml
+++ b/_data/software/firefox.yml
@@ -13,6 +13,9 @@ licences:
       en: 'https://www.mozilla.org/en-US/MPL/2.0/FAQ/'
       fr: 'https://www.mozilla.org/en-US/MPL/2.0/FAQ/'
     spdxID: MPL-2.0
+    level:
+      en: ''
+      fr: !<tag:yaml.org,2002:js/undefined> ''
 name:
   en: Firefox
   fr: Firefox
@@ -26,13 +29,13 @@ tags:
     - Poste de travail
     - Mobile
 administrations:
-  - adminCode: pch
-    uses:
+  - uses:
       - contact:
-          email: sebastien.lemay@hrsdc-rhdcc.gc.ca
+          email: asdfy@hrsdc-rhdcc.gc.ca
         date:
           started: '2019-05-06'
-          metadataLastUpdated: '2019-12-09'
+          metadataLastUpdated: '2025-03-19'
+    adminCode: pch
   - adminCode: esdc-edsc
     uses:
       - contact:
