--- a/_data/code/municipal/city-of-sault-ste-marie-on.yml
+++ b/_data/code/municipal/city-of-sault-ste-marie-on.yml
@@ -488,8 +488,8 @@ releases:
           fr: 'https://github.com/cityssm/lot-occupancy-system/blob/main/LICENSE'
         spdxID: MIT
         level:
-          en: ''
-          fr: ''
+          en: Main license
+          fr: License principale
     repositoryURL:
       en: 'https://github.com/cityssm/lot-occupancy-system'
       fr: 'https://github.com/cityssm/lot-occupancy-system'
